@@ -5,8 +5,10 @@ released versions.
 
 == Development version
 
-* Expose env vars that are mentionned in the arguments passed to shell expansions
+* Expose env vars that are mentioned in the arguments passed to shell expansions
 * Support for colored double underlines
+* `git apply` can now operate on selected changes in the current buffer's
+  file (useful for quick (un)staging and reverting)
 
 == Kakoune 2024.05.18
 
